--- a/README.html
+++ b/README.html
@@ -19,8 +19,39 @@
 <p>Honeywords are decoy passwords associated with each user account, and they contribute a promising approach to detecting password leakage. This approach has been covered by hundreds of medias and also been adopted in various research domains. The idea of honeywords looks deceptively simple, but it is a deep and sophisticated challenge to automatically generate honeywords that are hard to differentiate from real passwords. In Juels-Rivest’s work, four main honeyword-generation methods are suggested but only justiﬁed by heuristic security arguments.</p>
 <p>In this work, we for the ﬁrst time develop a series of experiments using 10 large-scale password datasets, a total of 104 million real-world passwords, to evaluate the security that these four methods can provide. Our results reveal that they all fail to provide the expected security: real passwords can be distinguished with a success rate of 29.29%∼32.62% by our basic trawling-guessing attacker, but not the claimed 5%, with just one guess (when each user account is associated with 19 honeywords as recommended). This ﬁgure reaches 34.21%∼49.02% under the advanced trawling-guessing attackers who make use of various state-of-the-art probabilistic password models. We further evaluate the security of Juels-Rivest’s methods under a targeted-guessing attacker who can exploit the victim’ personal information, and the results are even more alarming: 56.81%∼67.98%. Overall, our work resolves three open problems in honeyword research, as deﬁned by Juels and Rivest.</p>
 <h2 id="experiments-for-basic-trawling-attacks">Experiments for Basic Trawling Attacks</h2>
-<p>As shown in <code>experiments_for_basic_trawling_attacks</code>, we further evaluate Juels-Rivest’s four honeyword methods by using three datasets: Tianya, Rockyou and 000webhost.</p>
+<p>As shown in <code>experiments_for_basic_trawling_attacks.pdf</code>, we further evaluate Juels-Rivest’s four honeyword methods by using three datasets: Tianya, Rockyou and 000webhost.</p>
 <h2 id="an-example-of-attacking-code">An example of attacking code</h2>
+<p>Here, we take the <code>model syntax</code> method and the dataset <code>data/test.txt</code> and <code>data/train.txt</code> as example.</p>
+<ul>
+<li>
+<p>makefile</p>
+</li>
+<li>
+<p>generate the honeywords file and checker file</p>
+</li>
+</ul>
+<div class="codehilite"><pre><span class="nv">$ </span>./gen ./data/test.txt
+</pre></div>
+
+
+<p>then you can see two files <code>test_honeywords.txt</code> and <code>test_checker.txt</code> in the folder <code>data/</code>.</p>
+<ul>
+<li>calculate the probability of honeywords
+<code>calc</code> takes two parameters, the honeywords file and the training set. It generates the probability file <code>test_pr.txt</code> in the folder <code>data/</code>.</li>
+</ul>
+<div class="codehilite"><pre><span class="nv">$ </span>./calc ./data/test_honeywords.txt ./data/train.txt
+</pre></div>
+
+
+<ul>
+<li>attack
+<code>atk</code> takes three parameters, the probability file, the threshold of guess number for the single account and the threshold of guess number for the whole websites.</li>
+</ul>
+<div class="codehilite"><pre><span class="nv">$ </span>./atk test_pr.txt <span class="m">3</span> 10000
+</pre></div>
+
+
+<p>then you can find the file <code>test_crack_num.txt</code> in the folder <code>data/</code>, each line in the crack_num file means the the number of cracked account every time guessing wrong.</p>
 <h2 id="a-security-analysis-of-honeywords_1">A Security Analysis of Honeywords</h2>
 <p>To achieve perfect honeyword-generation, Imran  proposed the honeyindex system. To generate honeywords for a given user, honeyindex directly uses the other users' passwords as this user's honeywords. So the distribution of honeywords is equal to the distribution of passwords.</p>
 <h3 id="distinguishing-attack">Distinguishing attack</h3>
